<resources>
    <string name="app_name">DemoIOESdk</string>
    <string name="who">who</string>
    <string name="score">22</string>
    <string name="alphabet_text">u:</string>
    <string name="close">Close</string>
    <string name="pronounce_description">nâng gạc mềm lên cao</string>
    <string name="title_pronounce">Hướng dẫn phát âm</string>
    <string name="alpha_text">h</string>
    <string name="hello_world">Hello World!</string>
    <string name="init_text">click to init</string>
    <string name="start_text">click to start</string>
    <string name="stop_text">click to stop</string>
    <string name="play">Play</string>
</resources>
