<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constPronounce"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_rectange_white_bg_gray60_stroke_corner_8"
    android:paddingVertical="@dimen/fbase_dimen_16">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPronounceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/f_font_bold"
        android:paddingStart="@dimen/fbase_dimen_20"
        android:text="@string/title_pronounce"
        android:textColor="@color/black"
        android:textSize="@dimen/fbase_text_size_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPronounceCloseDialog"
        android:layout_width="@dimen/fbase_dimen_24"
        android:layout_height="@dimen/fbase_dimen_24"
        android:layout_marginEnd="@dimen/fbase_dimen_20"
        android:padding="@dimen/fbase_dimen_4"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vPronounce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fbase_dimen_1"
        android:layout_marginVertical="@dimen/fbase_dimen_20"
        android:background="@color/gray_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPronounceTitle" />

    <LinearLayout
        android:id="@+id/llPronounce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fbase_dimen_16"
        android:layout_marginTop="@dimen/fbase_dimen_20"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vPronounce">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPronouncePlay"
            android:layout_width="@dimen/fbase_dimen_34"
            android:layout_height="@dimen/fbase_dimen_34"
            android:paddingEnd="@dimen/fbase_dimen_10"
            android:paddingBottom="@dimen/fbase_dimen_10"
            android:src="@drawable/ic_volume" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPronounceAlphabet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/f_font_bold"
            android:text="@string/alpha_text"
            android:textColor="@color/black"
            android:textSize="@dimen/fbase_text_size_14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPronounceScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fbase_dimen_14"
            android:text="@string/score"
            android:textColor="@color/red_color"
            android:textSize="@dimen/fbase_text_size_14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPronounceDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fbase_dimen_16"
            android:text="@string/pronounce_description"
            android:textColor="@color/black" />

    </LinearLayout>

    <View
        android:id="@+id/vPronounceUnder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fbase_dimen_1"
        android:layout_marginVertical="@dimen/fbase_dimen_16"
        android:background="@color/gray_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPronounce" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPronounceClose"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/fbase_dimen_40"
        android:layout_marginHorizontal="@dimen/fbase_dimen_16"
        android:layout_marginVertical="@dimen/fbase_dimen_20"
        android:background="@drawable/shape_rectangle_gray_bg_corner_8"
        android:text="@string/close"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/fbase_text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vPronounceUnder" />

</androidx.constraintlayout.widget.ConstraintLayout>
